update readme, fix plate